by Ben Poole: removed height on h1 tag to fix border issue on smaller screens

--- a/web/themes/custom/oc_bootstrap/css/style.css
+++ b/web/themes/custom/oc_bootstrap/css/style.css
@@ -386,13 +386,12 @@ h1.page-header {
 h1.page-header > span {
   background: #FFFFFF;
   border: 2px solid #C77532;
-  border-radius: 23px;
+  border-radius: 50px;
   font-weight: 600;
   font-size: 24px;
   text-transform: uppercase;
   color: #C77532;
   line-height: 45px;
-  height: 45px;
   width: 200px;
   display: inline-block;
 }
